Fri Sep 24 22:22:43 BST 1999 Andy Thomas <alt@gimp.org>

	* app/fileops.c

	Fix for the preview/thumbnail interactions causing 
	corruptions.

Fri Sep 24 20:25:14 MEST 1999  Sven Neumann <sven@gimp.org>

	* gimprc.in
	* user_install
	* user_install.bat
	* app/gimprc.c
	* app/install.c
	* app/preferences_dialog.c: Updated the installed gimprc to reflect
	most (still not all) of the new options. Create a directory for
	the generated brushes in the users gimpdir. Appearantly, the brushes
	still aren't loaded ?!?

Fri Sep 24 17:09:30 1999  ape@gandalf.spacetec.no  (Asbjorn Pettersen)

	* plug-ins/common/jpeg.c: 
	* plug-ins/gflare/gflare.c: 
	* plug-ins/imagemap/imap_menu.c: Add <sys/types.h> before <sys/stat>
	to remove compiler warnings in OS/2. 

Thu Sep 23 18:04:25 PDT 1999 Manish Singh <yosh@gimp.org>

	* configure.in
	* plug-ins/script-fu/po: remove separate dir for po files

Fri Sep 24 02:19:05 MEST 1999  Sven Neumann <sven@gimp.org>

	* configure.in
	* plug-ins/script-fu/Makefile.am
	* plug-ins/script-fu/script-fu-console.c
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-server.c: i18n for script-fu
	* plug-ins/script-fu/script-fu/po/*: new directory with new files

	A patch from Daniel Egger giving a start on i18n for script-fu.

Thu Sep 23 16:29:09 PDT 1999 Manish Singh <yosh@gimp.org>

	* app/channel.h
	* app/gimpimage.h
	* app/gimpimageP.h 
	* app/layer.h
	* app/undo.[ch]
	* app/undo_types.h: use proper naming convention for undo enums,
	and hide them from the pdbgen stuff 

	* app/procedural_db.h: don't skip PDB_END

	* app/undo_history.c: remove gccism from undo_history_append_special

	* libgimp/gimpintl.h: INIT_LOCALE should be defined in all cases

	* plug-ins/script-fu/Makefile.am: add script-fu-constants.[ch]

	* plug-ins/script-fu/script-fu.c: use init_generated_constants

	* plug-ins/script-fu/siod.h: #include <stdio.h> for FILE *

	* tools/pdbgen/script-fu.pl: new file
